syntax = "proto3";
package com.tecnico.lemon.contract;

message PasswordRequest {
}

message PasswordResp {
}

message LoginReq {
  bytes encryptedKey = 1;
  bytes digest = 2;
}

message LoginResp {
}

service MobileService {
  rpc signup(PasswordRequest) returns (PasswordResp);
  rpc login(LoginReq) returns (LoginResp);
}